--- a/CrossProduct_190614.ipynb
+++ b/CrossProduct_190614.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "実行すると，$a1,a2,a3,b1,b2,b3$に値を入れるボックスがプログラム部分の直後に現れるので，それぞれの値を整数値で指定して下さい．これらのパラメータ値は，以下のベクトル$\\mathbb{a}, \\mathbb{b}$の成分を指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "\\mathbb{a}\n",
     "=\n",
     "\\begin{bmatrix}\n",
@@ -26,7 +26,7 @@
     "b2\\\\\n",
     "b3\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "パラメータを変更すると即座にベクトル$\\mathbb{a}, \\mathbb{b}$の成分が変更されます．連動して，２つのベクトルの外積$\\mathbb{a}\\times \\mathbb{b}$が表示され，$\\mathbb{a}, \\mathbb{b}, \\mathbb{a}\\times \\mathbb{b}$の３つのベクトルが描画されます．"
    ]
