change markdown description

--- a/GaussianEliminationRandom_190615.ipynb
+++ b/GaussianEliminationRandom_190615.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "実行すると，「cmax」に値を入れるボックスがプログラム部分の直後に現れるので，正の整数値で指定して下さい．cmaxの値に従って，以下の行列$A$とベクトル$\\mathbb{b}$の成分を-cmax$\\sim$cmaxの一様乱数(整数値)で指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "A=\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
@@ -25,13 +25,13 @@
     "b2\\\\\n",
     "b3\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "また，typeは「1」，「0」，「infty」の３種類から選択可能です．それぞれ，連立一次方程式の解の個数を表します．「1」を選択した際には，解が整数値となるようにパラメータ選択されます．\n",
     "\n",
     "パラメータを変更すると即座に行列$A$とベクトル$\\mathbb{b}$の成分が変更されます．連動して，連立一次方程式\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
     "a21 & a22 & a23\\\\\n",
@@ -48,11 +48,13 @@
     "b2\\\\\n",
     "b3\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "の拡大係数行列$(A\\ \\mathbb{b})$が表示されます．更に，連立一次方程式の解が以下の形式で表示されます．\n",
     "\n",
-    "$\\{(x,y,z)\\}$\n",
+    "\\begin{align*}\n",
+    "\\{(x,y,z)\\}\n",
+    "\\end{align*}\n",
     "\n",
     "但し，解無しの場合は$\\emptyset$，解が無数に存在する場合はパラメータ表示となります．"
    ]
@@ -88,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e6b4b41c171498caacb9ba5aa3b10ab",
+       "model_id": "af7abfd06f2649dcbd19497b10fcad22",
        "version_major": 2,
        "version_minor": 0
       },
