--- a/InverseMatrixRandom_190620.ipynb
+++ b/InverseMatrixRandom_190620.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "実行すると，「cmax」に値を入れるボックスがプログラム部分の直後に現れるので，正の整数値で指定して下さい．cmaxの値に従って，以下の行列$A$の成分を-cmax$\\sim$cmaxの一様乱数(整数値)で指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "A=\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
     "a21 & a22 & a23\\\\\n",
     "a31 & a32 & a33\\\\\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "また，typeは「regular」，「irregular」の2種類から選択可能です．それぞれ，「正則」，「非正則」を表します．「正則」を選択した際には，その逆行列の各成分が整数値となるようにパラメータ選択されます．\n",
     "\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1971ef20bcab477cb625ecab17b57ef2",
+       "model_id": "40f808f3b6804044962d4bc1a4848124",
        "version_major": 2,
        "version_minor": 0
       },
