--- a/InverseMatrix_190620.ipynb
+++ b/InverseMatrix_190620.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "実行すると，$a11,a12,a13,a21,a22,a23,a31,a32,a33$に値を入れるボックスがプログラム部分の直後に現れるので，それぞれの値を整数値で指定して下さい．これらのパラメータ値は，以下の行列$A$の成分を指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "A=\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
     "a21 & a22 & a23\\\\\n",
     "a31 & a32 & a33\\\\\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "パラメータを変更すると即座に行列$A$の成分が変更されます．連動して，行列$A$の正則性が判定され，正則な場合は逆行列$A^{-1}$が表示されます．"
    ]
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "975034cbcf98484b86a21ee481ee32c1",
+       "model_id": "af5c75cefeb544048537c2707e705166",
        "version_major": 2,
        "version_minor": 0
       },
