--- a/LinearMap_190624.ipynb
+++ b/LinearMap_190624.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "実行すると，$a11,a12,a13,a21,a22,a23,a31,a32,a33,x,y,z$に値を入れるボックスがプログラム部分の直後に現れるので，それぞれの値を指定して下さい．これらのパラメータ値は，以下の行列$A$とベクトル$\\mathbb{x}$の成分を指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "A=\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
@@ -25,7 +25,7 @@
     "y\\\\\n",
     "z\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "パラメータを変更すると即座に行列$A$とベクトル$\\mathbb{x}$の成分が変更されます．連動して，変換前のベクトル$\\mathbb{x}$と変換後のベクトル $A\\mathbb{x}$が描画されます．"
    ]
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "887f645f71fb437f8549576d48ab0c0c",
+       "model_id": "c9ed20c7f1d14a159c148959da5e0bc4",
        "version_major": 2,
        "version_minor": 0
       },
