--- a/Rotation_190625.ipynb
+++ b/Rotation_190625.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "実行すると，$axis$を選択するボックスと$theta,x,y,z$に値を入れるボックスがプログラム部分の直後に現れるので，それぞれの値を指定して下さい．パラメータ$axis$は回転軸を指定するために用います．$xaxis$は「x軸」，$yaxis$は「y軸」，$zaxis$は「z軸」をそれぞれ表します．$theta$は回転角を指定します．度数法で指定して下さい．$x,y,z$は，以下のベクトル$\\mathbb{x}$の成分を指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "\\mathbb{x}\n",
     "=\n",
     "\\begin{bmatrix}\n",
@@ -18,7 +18,7 @@
     "y\\\\\n",
     "z\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "パラメータを変更すると即座に回転行列$R$とベクトル$\\mathbb{x}$の成分が変更されます．連動して，変換前のベクトル$\\mathbb{x}$と変換後のベクトル $R\\mathbb{x}$が描画されます．"
    ]
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e69584cdf13e4842b42711e86ee8a071",
+       "model_id": "fd5225e915e14289b6b1a5b320f42aa0",
        "version_major": 2,
        "version_minor": 0
       },
