--- a/GaussianElimination_190614.ipynb
+++ b/GaussianElimination_190614.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "実行すると，$a11,a12,a13,a21,a22,a23,a31,a32,a33,b1,b2,b3$に値を入れるボックスがプログラム部分の直後に現れるので，それぞれの値を整数値で指定して下さい．これらのパラメータ値は，以下の行列$A$とベクトル$\\mathbb{b}$の成分を指定します．\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "A=\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
@@ -25,11 +25,11 @@
     "b2\\\\\n",
     "b3\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "パラメータを変更すると即座に行列$A$とベクトル$\\mathbb{b}$の成分が変更されます．連動して，連立一次方程式\n",
     "\n",
-    "$\n",
+    "\\begin{align*}\n",
     "\\begin{bmatrix}\n",
     "a11 & a12 & a13\\\\\n",
     "a21 & a22 & a23\\\\\n",
@@ -46,11 +46,13 @@
     "b2\\\\\n",
     "b3\n",
     "\\end{bmatrix}\n",
-    "$\n",
+    "\\end{align*}\n",
     "\n",
     "の拡大係数行列$(A\\ \\mathbb{b})$が表示されます．更に，連立一次方程式の解が以下の形式で表示されます．\n",
     "\n",
-    "$\\{(x,y,z)\\}$\n",
+    "\\begin{align*}\n",
+    "\\{(x,y,z)\\}\n",
+    "\\end{align*}\n",
     "\n",
     "但し，解無しの場合は$\\emptyset$，解が無数に存在する場合はパラメータ表示となります．"
    ]
@@ -79,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af1040b8129d432ebe677f9c2c37991b",
+       "model_id": "0d00616ecaa143c5978de77cca2f8b8e",
        "version_major": 2,
        "version_minor": 0
       },
